add a skipDiff field because it wasn't working properly and I don't want to try to fix it right now

--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,9 @@ inputs:
   changelogPath:
     description: 'The path to the changelog file. Defaults to `./CHANGELOG.md`'
     required: false
+  skipDiff:
+    description: 'Skip adding the git diff links.'
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
